--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
             <version>4.2.5.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1204-jdbc42</version>
+        </dependency>
     </dependencies>
 
     <build>
